RESOLVED FIXED98610
[EFL][WK2] Fix unused parameter compile warning.
https://bugs.webkit.org/show_bug.cgi?id=98610
Summary [EFL][WK2] Fix unused parameter compile warning.
Kangil Han
Reported 2012-10-06 23:51:38 PDT
Fixed unused parameter compile warning by removing initiatingPageRef parameter name.
Attachments
patch (1.74 KB, patch)
2012-10-06 23:52 PDT, Kangil Han
no flags
Kangil Han
Comment 1 2012-10-06 23:52:55 PDT
Laszlo Gombos
Comment 2 2012-10-07 20:06:48 PDT
Comment on attachment 167470 [details] patch r=me. Should we enable error on warning to find these earlier ?
WebKit Review Bot
Comment 3 2012-10-07 20:40:46 PDT
Comment on attachment 167470 [details] patch Clearing flags on attachment: 167470 Committed r130614: <http://trac.webkit.org/changeset/130614>
WebKit Review Bot
Comment 4 2012-10-07 20:40:50 PDT
All reviewed patches have been landed. Closing bug.
Kentaro Hara
Comment 5 2012-10-07 21:46:54 PDT
gyuyoung: BTW, what was the conclusion of the webkit-dev@ discussion about how to handle unused parameters?
Chris Dumez
Comment 6 2012-10-07 21:52:28 PDT
(In reply to comment #5) > gyuyoung: BTW, what was the conclusion of the webkit-dev@ discussion about how to handle unused parameters? 1. Omit argument name if its purpose is clear without name 2. Comment the argument name otherwise 3. Use UNUSED_PARAM() macro in the #else case if the argument is used only in the #ifdef case.
Gyuyoung Kim
Comment 7 2012-10-07 21:54:55 PDT
(In reply to comment #5) > gyuyoung: BTW, what was the conclusion of the webkit-dev@ discussion about how to handle unused parameters? Darin's suggestion was adopted. http://lists.webkit.org/pipermail/webkit-dev/2012-October/022369.html
Kentaro Hara
Comment 8 2012-10-07 21:55:29 PDT
Thanks!
Chris Dumez
Comment 9 2012-10-07 21:56:12 PDT
(In reply to comment #7) > (In reply to comment #5) > > gyuyoung: BTW, what was the conclusion of the webkit-dev@ discussion about how to handle unused parameters? > > Darin's suggestion was adopted. > > http://lists.webkit.org/pipermail/webkit-dev/2012-October/022369.html BTW, it does not seem that the coding style was updated.
Gyuyoung Kim
Comment 10 2012-10-07 22:06:22 PDT
(In reply to comment #9) > (In reply to comment #7) > > (In reply to comment #5) > > > gyuyoung: BTW, what was the conclusion of the webkit-dev@ discussion about how to handle unused parameters? > > > > Darin's suggestion was adopted. > > > > http://lists.webkit.org/pipermail/webkit-dev/2012-October/022369.html > > BTW, it does not seem that the coding style was updated. Though Ryosuke asked this if this coding style needs to be added, there is no reply about it. It would be good if someone adds this to coding style guide document. But, the mailing thread is enough for me now. http://lists.webkit.org/pipermail/webkit-dev/2012-October/022375.html
Gyuyoung Kim
Comment 11 2012-10-07 22:08:51 PDT
Kentaro, do you think this coding style should be added to the webkit style guide ?
Kentaro Hara
Comment 12 2012-10-07 22:15:25 PDT
(In reply to comment #11) > Kentaro, do you think this coding style should be added to the webkit style guide ? As far as I understood the discussion, people have reached a consensus on the conclusion. So let's add it to the coding style guide, and just reply to the thread saying "I added it". If someone replied "Don't add it", then let's continue the discussion:)
Gyuyoung Kim
Comment 13 2012-10-07 22:20:36 PDT
(In reply to comment #12) > (In reply to comment #11) > > Kentaro, do you think this coding style should be added to the webkit style guide ? > > As far as I understood the discussion, people have reached a consensus on the conclusion. So let's add it to the coding style guide, and just reply to the thread saying "I added it". If someone replied "Don't add it", then let's continue the discussion:) Do you know how to modify it ? It looks I don't have a permission to modify it. Or, Ryousuke can add this.
Note You need to log in before you can comment on or make changes to this bug.