[EFL][WK2] Fix unused parameter compile warning. https://bugs.webkit.org/show_bug.cgi?id=98610

Patch by Kangil Han <kangil.han@samsung.com> on 2012-10-07
Reviewed by Laszlo Gombos.

Fixed unused parameter compile warning by removing initiatingPageRef parameter name.

* UIProcess/API/efl/ewk_context_request_manager_client.cpp:
(didReceiveURIRequest):

Canonical link: https://commits.webkit.org/116601@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130614 268f45cc-cd09-0410-ab3c-d52691b4dbfc